coderpen: vert elements

--- a/coderpen/vertical-rotating-text/index.html
+++ b/coderpen/vertical-rotating-text/index.html
@@ -10,8 +10,9 @@
   <div class="innerIam">
     Frontier AI models <br /> 
     Foundation models <br />
-    World models <br />
     RL agents <br />
+    World models <br />
+    Frontier AI models <br />
   </div>
 </b>  
 <p> for the electricity grid</p>
